Carrot: 명예의 손가락

--- a/carrot(ver. 3)/index.html
+++ b/carrot(ver. 3)/index.html
@@ -26,20 +26,7 @@
       <section class="game__field a"></section>
       <section class="game__record">
         <div class="game__record__title">명예의 손가락</div>
-        <ul class="user-record-list">
-          <!-- <li class="user-record">
-            <span class="user__name">이름: 김병훈</span>
-            <span class="user__score">시간: 4초</span>
-          </li>
-          <li class="user-record">
-            <span class="user__name">이름: 김병훈</span>
-            <span class="user__score">시간: 4초</span>
-          </li>
-          <li class="user-record">
-            <span class="user__name">이름: 김병훈</span>
-            <span class="user__score">시간: 4초</span>
-          </li> -->
-        </ul>
+        <ul class="user-record-list"></ul>
       </section>
     </section>
     <section class="pop-up pop-up--hide">
